--- a/Bookshelf/Views/Base.lproj/Main.storyboard
+++ b/Bookshelf/Views/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="IdP-ik-Q7s">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
@@ -8,20 +8,125 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Book List Table View Controller-->
+        <scene sceneID="0bl-ic-DzY">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Bookshelf" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController id="Qj8-q4-p1U" customClass="BookListTableViewController" customModule="Bookshelf" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="KeY-9b-tI1">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="bookTitleCell" id="R6J-tb-IfV">
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="R6J-tb-IfV" id="1Im-x9-xsI">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="I9I-k9-bpl" kind="show" identifier="toDetailVC" id="QTR-zE-i4b"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Qj8-q4-p1U" id="1yT-En-2ql"/>
+                            <outlet property="delegate" destination="Qj8-q4-p1U" id="ruq-Tj-YkR"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="KVc-SA-Zwy"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dMa-J6-NLR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="96" y="94"/>
+            <point key="canvasLocation" x="368.11594202898556" y="22.767857142857142"/>
+        </scene>
+        <!--Book Detail View Controller-->
+        <scene sceneID="Vnt-kZ-zNt">
+            <objects>
+                <viewController id="I9I-k9-bpl" customClass="BookDetailViewController" customModule="Bookshelf" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yqx-SQ-XZr">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(author)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kh4-50-sxD">
+                                <rect key="frame" x="16" y="145.5" width="382" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8u9-AP-wI6">
+                                <rect key="frame" x="16" y="211" width="382" height="373.5"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(date)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8dX-e8-RNL">
+                                <rect key="frame" x="16" y="604.5" width="382" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(description)" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d1b-5b-Nds">
+                                <rect key="frame" x="16" y="641.5" width="382" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(title)" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AJO-fr-jMs">
+                                <rect key="frame" x="16" y="108" width="382" height="21.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="LsR-FV-oH3"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="LsR-FV-oH3" firstAttribute="trailing" secondItem="8dX-e8-RNL" secondAttribute="trailing" constant="16" id="Azj-kq-hmC"/>
+                            <constraint firstItem="d1b-5b-Nds" firstAttribute="top" secondItem="8dX-e8-RNL" secondAttribute="bottom" constant="16" id="BGv-1x-YKL"/>
+                            <constraint firstItem="8dX-e8-RNL" firstAttribute="top" secondItem="8u9-AP-wI6" secondAttribute="bottom" constant="20" id="FmS-ZG-ZvR"/>
+                            <constraint firstItem="kh4-50-sxD" firstAttribute="top" secondItem="AJO-fr-jMs" secondAttribute="bottom" constant="16" id="Gao-Ci-vBS"/>
+                            <constraint firstItem="LsR-FV-oH3" firstAttribute="bottom" secondItem="d1b-5b-Nds" secondAttribute="bottom" constant="200" id="PqI-gp-v5c"/>
+                            <constraint firstItem="kh4-50-sxD" firstAttribute="leading" secondItem="LsR-FV-oH3" secondAttribute="leading" constant="16" id="PyX-W3-dgN"/>
+                            <constraint firstItem="LsR-FV-oH3" firstAttribute="trailing" secondItem="AJO-fr-jMs" secondAttribute="trailing" constant="16" id="Tfy-m0-j9v"/>
+                            <constraint firstItem="LsR-FV-oH3" firstAttribute="trailing" secondItem="d1b-5b-Nds" secondAttribute="trailing" constant="16" id="Yh9-C8-9Hp"/>
+                            <constraint firstItem="8u9-AP-wI6" firstAttribute="top" secondItem="kh4-50-sxD" secondAttribute="bottom" constant="45" id="aC8-nV-X6y"/>
+                            <constraint firstItem="d1b-5b-Nds" firstAttribute="leading" secondItem="LsR-FV-oH3" secondAttribute="leading" constant="16" id="gBi-yM-r8v"/>
+                            <constraint firstItem="LsR-FV-oH3" firstAttribute="trailing" secondItem="8u9-AP-wI6" secondAttribute="trailing" constant="16" id="gyI-H7-f2S"/>
+                            <constraint firstItem="AJO-fr-jMs" firstAttribute="top" secondItem="LsR-FV-oH3" secondAttribute="top" constant="20" id="hoa-S1-5VV"/>
+                            <constraint firstItem="AJO-fr-jMs" firstAttribute="leading" secondItem="LsR-FV-oH3" secondAttribute="leading" constant="16" id="k0a-WO-kV6"/>
+                            <constraint firstItem="8dX-e8-RNL" firstAttribute="leading" secondItem="LsR-FV-oH3" secondAttribute="leading" constant="16" id="moz-Rf-Br3"/>
+                            <constraint firstItem="LsR-FV-oH3" firstAttribute="trailing" secondItem="kh4-50-sxD" secondAttribute="trailing" constant="16" id="yhz-ic-sZ5"/>
+                            <constraint firstItem="8u9-AP-wI6" firstAttribute="leading" secondItem="LsR-FV-oH3" secondAttribute="leading" constant="16" id="zEp-en-Us0"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="arV-WC-7MG"/>
+                    <connections>
+                        <outlet property="authorLabel" destination="kh4-50-sxD" id="LMo-3Y-vSx"/>
+                        <outlet property="bookImage" destination="8u9-AP-wI6" id="6vT-ps-OOM"/>
+                        <outlet property="dateLabel" destination="8dX-e8-RNL" id="5o0-mY-9Xh"/>
+                        <outlet property="descriptionLabel" destination="d1b-5b-Nds" id="wCk-jZ-JgE"/>
+                        <outlet property="titleLabel" destination="AJO-fr-jMs" id="LKB-wR-6dF"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BTf-E7-tHd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1197.1014492753625" y="22.767857142857142"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="YEO-lJ-Tzr">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="IdP-ik-Q7s" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Lpz-Xq-aG6">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Qj8-q4-p1U" kind="relationship" relationship="rootViewController" id="C3T-KL-V0b"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fSM-5F-Ih2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-542.02898550724638" y="22.767857142857142"/>
         </scene>
     </scenes>
     <resources>
